fix poms